--- a/style.css
+++ b/style.css
@@ -1,11 +1,5 @@
 :root {
     --blue: hsl(246, 80%, 60%);
-    --light-red-work: hsl(15, 100%, 70%);
-    --soft-blue-play: hsl(195, 74%, 62%);
-    --light-red-study: hsl(348, 100%, 68%);
-    --lime-green-exercise: hsl(145, 58%, 55%);
-    --violet-social: hsl(264, 64%, 52%);
-    --soft-orange-self-care: hsl(43, 84%, 65%);
 
     --very-dark-blue: hsl(226, 43%, 10%);
     --dark-blue: hsl(235, 46%, 20%);
@@ -13,8 +7,273 @@
     --pale-blue: hsl(236, 100%, 87%);
 }
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+html {
+    font-size: 18px;
+    font-family: "Rubik", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+body {
+    background-color: var(--very-dark-blue);
+    color: var(--desaturated-blue);
+}
+
+.container {
+    max-width: 375px;
+    margin: 0 auto;
+    padding: 3rem 1.25rem;
+    background-color: var(--very-dark-blue);
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem;
+}
+
+.card {
+    border-radius: 1rem;
+    overflow: hidden;
+}
+
+header .card {
+    background-color: var(--dark-blue);
+}
+
+.profile {
+    background-color: var(--blue);
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    justify-content: start;
+    padding: 1.5rem;
+    border-radius: 1rem;
+}
+
+.profile img {
+    width: 4rem;
+    border: .2rem solid white;
+    border-radius: 50%;
+}
+
+.profile p {
+    font-size: .85rem;
+    color: var(--pale-blue);
+}
+
+.profile h1 {
+    font-size: 1.4rem;
+    font-weight: 300;
+    color: white;
+}
+
+.period {
+    display: grid;
+    grid-template: 1fr / 1fr 1fr 1fr;
+    padding: 1.25rem .5rem;
+}
+
+.period label {
+    display: flex;
+    justify-content: center;
+}
+
+.period label:has(input:checked) {
+    color: white;
+}
+
+.period input {
+    display: none;
+}
+
+main {
+    display: grid;
+    row-gap: 1.25rem;
+    grid-template: repeat(6, auto) / 1fr;
+}
+
+main .card .card-header {
+    background-repeat: no-repeat;
+    background-position: right 7.5% top 25%;
+    padding: 1rem;
+}
+
+main .card-details {
+    background-color: var(--dark-blue);
+    border-radius: 1rem;
+    padding: 1.25rem;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
+
+main .card-details .section-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+main .card-details .section-header span {
+    color: white;
+    font-weight: 500;
+}
+
+main .card-details .timeframe {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: .85rem;
+    color: var(--pale-blue);
+}
+
+main .card-details .timeframe .current {
+    font-size: 1.75rem;
+    font-weight: 300;
+    color: white;
+}
+
+.period label, .card-details, .section-title img {
+    cursor: pointer;
+}
+
+.period label:hover {
+    color: white;
+}
+
+.card-details:hover {
+    background-color: var(--desaturated-blue);
+}
+
+.card-details .section-header img:hover {
+    filter: brightness(10);
+}
+
+.card-details:has(img:hover):hover {
+    background-color: var(--dark-blue);
+}
+
+@media screen and (min-width: 600px) {
+    .container {
+        max-width: 800px;
+        display: grid;
+        grid-template: 1fr / 1fr 2.1fr;
+    }
+
+    header .card {
+        height: 100%;
+        display: grid;
+        grid-template: 7fr 3fr / 1fr;
+    }
+
+    .profile {
+        flex-direction: column;
+        align-items: start;
+        padding: 1.25rem;
+        gap: 1.75rem;
+    }
+
+    .profile h1 {
+        font-size: 1.75rem;
+    }
+
+    .period {
+        padding: 1rem 1.25rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .period label {
+        justify-content: start;
+    }
+
+    main {
+        grid-template: 1fr 1fr 1fr / 1fr 1fr;
+        gap: 1.25rem;
+    }
+
+    main .card-details {
+        gap: 1rem;
+    }
+
+    main .card-details .section-header span {
+        font-size: .75rem;
+    }
+    
+    main .card-details .section-header img {
+        width: .85rem;
+    }
+
+    main .card-details .timeframe {
+        flex-direction: column;
+        align-items: start;
+        gap: .25rem;
+    }
+
+    main .card-details .timeframe .current {
+        font-size: 2.5rem;
+    }
+
+    main .card-details .timeframe .previous {
+        font-size: .65rem;
+        margin-bottom: .5rem;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+
+    .container {
+        max-width: 1154px;
+        grid-template: 1fr / 1fr 3.25fr;
+        padding: 1.5rem;
+    }
+
+    .profile img {
+        width: 5rem;
+    }
+
+    .profile p {
+        font-size: .9rem;
+    }
+
+    .profile h1 {
+        font-size: 2.35rem;
+    }
+
+    .period label {
+        font-size: .9rem;
+    }
+
+    main {
+        grid-template: 1fr 1fr / 1fr 1fr 1fr;
+    }
+
+    main .card-details .section-header span {
+        font-size: 1rem;
+    }
+    
+    main .card-details .section-header img {
+        width: 1rem;
+    }
+
+    main .card-details .timeframe .current {
+        font-size: 3.5rem;
+    }
+
+    main .card-details .timeframe .previous {
+        font-size: .95rem;
+    }
 }
